--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <tempus-trakus>Lade Tempus</tempus-trakus>
+  <tt-app>Lade Tempus</tt-app>
 </body>
 </html>
